BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call_Search_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Extra_Condtion__c</fullName>
        <label>Extra Condition</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result_Field_Set__c</fullName>
        <label>Result Field Set</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Field_Set__c</fullName>
        <label>Search Field Set</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Call Search Settings</label>
    <nameField>
        <label>Call Search Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Search Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>